--- a/public/css/global.css
+++ b/public/css/global.css
@@ -615,48 +615,49 @@ ul.dropdown-menu.bbcode-color li span {
 }
 
 /* line 370, ../sass/global.scss */
-.btn.btn-bbcode {
+.bbcode-toolbar .btn {
   min-width: 32px;
-  height: 30px;
+  height: 30px !important;
+  padding: 5px 10px;
   overflow: hidden;
 }
-/* line 375, ../sass/global.scss */
-.btn.btn-bbcode .bbcode-quote {
+/* line 376, ../sass/global.scss */
+.bbcode-toolbar .btn .bbcode-quote {
   font-size: 36px;
   line-height: 1;
   display: block;
 }
-/* line 380, ../sass/global.scss */
-.btn.btn-bbcode .bbcode-underline {
+/* line 381, ../sass/global.scss */
+.bbcode-toolbar .btn .bbcode-underline {
   text-decoration: underline;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 385, ../sass/global.scss */
-.btn.btn-bbcode .bbcode-strikethrough {
+/* line 386, ../sass/global.scss */
+.bbcode-toolbar .btn .bbcode-strikethrough {
   text-decoration: line-through;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 390, ../sass/global.scss */
-.btn.btn-bbcode .bbcode-ol {
+/* line 391, ../sass/global.scss */
+.bbcode-toolbar .btn .bbcode-ol {
   font-size: 9px;
   line-height: 10px;
   display: block;
 }
 
-/* line 397, ../sass/global.scss */
+/* line 398, ../sass/global.scss */
 table.calendar {
   padding: 0;
   border-collapse: collapse;
 }
-/* line 399, ../sass/global.scss */
+/* line 400, ../sass/global.scss */
 table.calendar th {
   text-align: center;
   width: 14%;
   color: #ccc;
 }
-/* line 400, ../sass/global.scss */
+/* line 401, ../sass/global.scss */
 table.calendar td.day {
   width: 14%;
   height: 85px;
@@ -666,37 +667,37 @@ table.calendar td.day {
   padding: 4px;
   font-size: 8pt;
 }
-/* line 403, ../sass/global.scss */
+/* line 404, ../sass/global.scss */
 table.calendar td.day.has-events {
   border: 2px solid #000;
   background: #7f7f7f;
 }
-/* line 404, ../sass/global.scss */
+/* line 405, ../sass/global.scss */
 table.calendar td.day.today {
   border: 2px solid #000;
 }
-/* line 405, ../sass/global.scss */
+/* line 406, ../sass/global.scss */
 table.calendar td.day.today.has-events {
   background: #999;
 }
 
-/* line 412, ../sass/global.scss */
+/* line 413, ../sass/global.scss */
 #shoutbox a.at_reply {
   color: #ccc;
   text-decoration: none;
 }
-/* line 414, ../sass/global.scss */
+/* line 415, ../sass/global.scss */
 #shoutbox th.date {
   background: #3e444c;
   color: #eee;
   text-align: right;
 }
-/* line 419, ../sass/global.scss */
+/* line 420, ../sass/global.scss */
 #shoutbox p {
   margin: 0;
 }
 
-/* line 424, ../sass/global.scss */
+/* line 425, ../sass/global.scss */
 #embed #shoutbox tbody {
   display: block;
   font-size: 10pt;
@@ -704,7 +705,7 @@ table.calendar td.day.today.has-events {
   overflow: auto;
 }
 
-/* line 432, ../sass/global.scss */
+/* line 433, ../sass/global.scss */
 .attachment-box {
   margin: 15px 0 0;
   padding: 8px 0;
@@ -712,7 +713,7 @@ table.calendar td.day.today.has-events {
   border-bottom: 1px solid #999999;
 }
 
-/* line 437, ../sass/global.scss */
+/* line 438, ../sass/global.scss */
 a.scaled {
   text-decoration: none;
   display: block;
@@ -723,32 +724,32 @@ a.scaled {
   font-size: 10pt;
 }
 
-/* line 442, ../sass/global.scss */
+/* line 443, ../sass/global.scss */
 .quote {
   margin: 5px 0 5px 20px;
   border: 1px solid #333;
   background: #777777;
   padding: 0;
 }
-/* line 444, ../sass/global.scss */
+/* line 445, ../sass/global.scss */
 .quote .author {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #333;
   background: #555555;
 }
-/* line 446, ../sass/global.scss */
+/* line 447, ../sass/global.scss */
 .quote .author img {
   margin-left: 10px;
   vertical-align: middle;
 }
-/* line 448, ../sass/global.scss */
+/* line 449, ../sass/global.scss */
 .quote .content {
   margin: 0;
   padding: 5px 15px 5px 5px;
 }
 
-/* line 451, ../sass/global.scss */
+/* line 452, ../sass/global.scss */
 .spoiler-alert {
   color: #900;
   background: #777;
@@ -757,13 +758,13 @@ a.scaled {
   text-decoration: none;
   padding: 2px 5px;
 }
-/* line 454, ../sass/global.scss */
+/* line 455, ../sass/global.scss */
 .spoiler-alert:hover {
   color: #060;
   border: 2px dashed #060;
 }
 
-/* line 456, ../sass/global.scss */
+/* line 457, ../sass/global.scss */
 .spoiler {
   display: none;
   border: 2px dashed #900;
@@ -771,7 +772,7 @@ a.scaled {
   padding: 5px;
 }
 
-/* line 460, ../sass/global.scss */
+/* line 461, ../sass/global.scss */
 pre.code {
   font-size: 10pt;
   font-family: "Courier New",mono;
@@ -784,23 +785,23 @@ pre.code {
   overflow-x: auto;
 }
 
-/* line 466, ../sass/global.scss */
+/* line 467, ../sass/global.scss */
 .gold-icon {
   color: #ffe400;
 }
 
-/* line 470, ../sass/global.scss */
+/* line 471, ../sass/global.scss */
 .sig {
   border-top: 1px dotted #cccccc;
   color: #cccccc;
   font-size: 10pt;
 }
-/* line 474, ../sass/global.scss */
+/* line 475, ../sass/global.scss */
 .sig object {
   display: none;
 }
 
-/* line 477, ../sass/global.scss */
+/* line 478, ../sass/global.scss */
 .thumbnail-selector {
   float: left;
   width: 500px;
@@ -813,36 +814,36 @@ pre.code {
   line-height: 0;
   padding: 10px 5px;
 }
-/* line 480, ../sass/global.scss */
+/* line 481, ../sass/global.scss */
 .thumbnail-selector .thumbnail {
   margin: 0 3px;
   height: 150px;
   display: inline-block;
 }
-/* line 482, ../sass/global.scss */
+/* line 483, ../sass/global.scss */
 .thumbnail-selector .thumbnail div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 484, ../sass/global.scss */
+/* line 485, ../sass/global.scss */
 .thumbnail-selector .thumbnail div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
 
 @media all and (max-width: 767px) {
-  /* line 491, ../sass/global.scss */
+  /* line 492, ../sass/global.scss */
   table.table th.icon, table.table td.icon {
     width: 30px;
   }
-  /* line 493, ../sass/global.scss */
+  /* line 494, ../sass/global.scss */
   table.table th.icon.wide, table.table td.icon.wide {
     width: 35px;
   }
 
-  /* line 496, ../sass/global.scss */
+  /* line 497, ../sass/global.scss */
   .album {
     width: 100%;
     min-height: 97px;
@@ -850,55 +851,55 @@ pre.code {
     padding-left: 142px;
     margin-bottom: 15px;
   }
-  /* line 503, ../sass/global.scss */
+  /* line 504, ../sass/global.scss */
   .album .photo {
     width: 112px;
     height: 87px;
   }
-  /* line 506, ../sass/global.scss */
+  /* line 507, ../sass/global.scss */
   .album .photo img {
     max-width: 100px;
     max-height: 75px;
   }
 
-  /* line 514, ../sass/global.scss */
+  /* line 515, ../sass/global.scss */
   footer #social-media {
     float: none;
     margin: 0 0 10px;
   }
-  /* line 516, ../sass/global.scss */
+  /* line 517, ../sass/global.scss */
   footer #social-media img {
     margin: 0;
   }
-  /* line 518, ../sass/global.scss */
+  /* line 519, ../sass/global.scss */
   footer #social-media ul.footer li {
     margin: 0 3px;
   }
 
-  /* line 523, ../sass/global.scss */
+  /* line 524, ../sass/global.scss */
   div.scaled {
     display: none;
   }
 
-  /* line 524, ../sass/global.scss */
+  /* line 525, ../sass/global.scss */
   img.post-image {
     max-width: 100%;
     height: auto;
   }
 }
 @media print {
-  /* line 528, ../sass/global.scss */
+  /* line 529, ../sass/global.scss */
   a {
     color: #369 !important;
     text-decoration: none;
   }
 
-  /* line 529, ../sass/global.scss */
+  /* line 530, ../sass/global.scss */
   nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
     display: none;
   }
 
-  /* line 532, ../sass/global.scss */
+  /* line 533, ../sass/global.scss */
   img {
     max-width: 100%;
     height: auto;
