Cleaning up attachment display, deleting, icon positioning

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -238,29 +238,40 @@ ol.breadcrumb > li + li:before {
 }
 
 /* line 102, ../sass/global.scss */
+.btn:not(.icon-only) .glyphicon {
+  margin-right: 4px;
+}
+
+/* line 105, ../sass/global.scss */
+.btn.icon-right .glyphicon {
+  margin-right: 0;
+  margin-left: 4px;
+}
+
+/* line 110, ../sass/global.scss */
 #main_beta {
   position: relative;
 }
-/* line 105, ../sass/global.scss */
+/* line 113, ../sass/global.scss */
 #main_beta h1 {
   font-size: 12pt;
   font-weight: bold;
 }
-/* line 108, ../sass/global.scss */
+/* line 116, ../sass/global.scss */
 #main_beta h1 img {
   vertical-align: middle;
 }
-/* line 110, ../sass/global.scss */
+/* line 118, ../sass/global.scss */
 #main_beta h2 {
   font-size: 11pt;
   font-weight: bold;
 }
-/* line 113, ../sass/global.scss */
+/* line 121, ../sass/global.scss */
 #main_beta h2 img {
   vertical-align: middle;
 }
 
-/* line 117, ../sass/global.scss */
+/* line 125, ../sass/global.scss */
 .birthday {
   border: 2px solid #000;
   color: #000;
@@ -268,28 +279,28 @@ ol.breadcrumb > li + li:before {
   padding: 16px 8px;
   text-align: center;
 }
-/* line 120, ../sass/global.scss */
+/* line 128, ../sass/global.scss */
 .birthday a {
   color: #000;
   font-weight: bold;
 }
 
-/* line 123, ../sass/global.scss */
+/* line 131, ../sass/global.scss */
 .panel-body {
   word-wrap: break-word;
 }
 
-/* line 126, ../sass/global.scss */
+/* line 134, ../sass/global.scss */
 .panel-sm {
   margin-bottom: 8px;
 }
 
-/* line 131, ../sass/global.scss */
+/* line 139, ../sass/global.scss */
 p.empty {
   padding: 30px 0;
   text-align: center;
 }
-/* line 135, ../sass/global.scss */
+/* line 143, ../sass/global.scss */
 p.photo-description {
   background: #777777;
   border: 1px solid #333;
@@ -297,35 +308,35 @@ p.photo-description {
   margin: 0 0 10px 0;
 }
 
-/* line 142, ../sass/global.scss */
+/* line 150, ../sass/global.scss */
 .jumbotron blockquote p {
   font-size: 17.5px;
 }
 
-/* line 146, ../sass/global.scss */
+/* line 154, ../sass/global.scss */
 #avatars {
   height: 160px;
   overflow: auto;
 }
-/* line 148, ../sass/global.scss */
+/* line 156, ../sass/global.scss */
 #avatars .avat {
   float: left;
   height: 150px;
   margin: 0 5px;
 }
-/* line 150, ../sass/global.scss */
+/* line 158, ../sass/global.scss */
 #avatars .avat div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 152, ../sass/global.scss */
+/* line 160, ../sass/global.scss */
 #avatars .avat div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
-/* line 153, ../sass/global.scss */
+/* line 161, ../sass/global.scss */
 #avatars .avat div #avtext {
   width: 116px;
   height: 116px;
@@ -334,51 +345,51 @@ p.photo-description {
   font-size: 10pt;
 }
 
-/* line 158, ../sass/global.scss */
+/* line 166, ../sass/global.scss */
 .pull-right ul.pagination {
   margin: 0;
 }
 
-/* line 162, ../sass/global.scss */
+/* line 170, ../sass/global.scss */
 textarea.form-control.textarea-sm {
   height: 5em;
 }
 
-/* line 166, ../sass/global.scss */
+/* line 174, ../sass/global.scss */
 .form-control.select-multiple {
   min-height: 200px;
   padding: 0;
   border-radius: 0;
 }
-/* line 171, ../sass/global.scss */
+/* line 179, ../sass/global.scss */
 .form-control.select-multiple option {
   padding: 4px;
 }
 
-/* line 177, ../sass/global.scss */
+/* line 185, ../sass/global.scss */
 .panel-footer .form-group {
   margin-bottom: 0;
 }
 
-/* line 182, ../sass/global.scss */
+/* line 190, ../sass/global.scss */
 .disabled > span, .disabled > a {
   cursor: default !important;
 }
 
-/* line 187, ../sass/global.scss */
+/* line 195, ../sass/global.scss */
 footer {
   margin: 20px 0;
   text-align: center;
   font-size: 8pt;
   color: #ccc;
 }
-/* line 192, ../sass/global.scss */
+/* line 200, ../sass/global.scss */
 footer ul.footer {
   margin: 0;
   padding: 0;
   display: inline;
 }
-/* line 196, ../sass/global.scss */
+/* line 204, ../sass/global.scss */
 footer ul.footer li {
   margin: 0 6px;
   padding: 0;
@@ -386,14 +397,14 @@ footer ul.footer li {
   display: inline;
 }
 
-/* line 204, ../sass/global.scss */
+/* line 212, ../sass/global.scss */
 .album {
   padding: 0 15px 0 242px;
   border: 0;
   height: 182px;
   position: relative;
 }
-/* line 210, ../sass/global.scss */
+/* line 218, ../sass/global.scss */
 .album .photo {
   position: absolute;
   margin: 0;
@@ -402,14 +413,14 @@ footer ul.footer li {
   z-index: 10;
 }
 
-/* line 218, ../sass/global.scss */
+/* line 226, ../sass/global.scss */
 .photo, .photo-large {
   float: left;
   margin: 10px;
   border: 0;
   text-align: center;
 }
-/* line 224, ../sass/global.scss */
+/* line 232, ../sass/global.scss */
 .photo a.thumb, .photo-large a.thumb {
   display: block;
   background: #888888;
@@ -418,139 +429,139 @@ footer ul.footer li {
   text-decoration: none;
   padding: 5px;
 }
-/* line 232, ../sass/global.scss */
+/* line 240, ../sass/global.scss */
 .photo a.thumb:hover, .photo-large a.thumb:hover {
   background: #999999;
   border: 1px solid #444444;
 }
-/* line 237, ../sass/global.scss */
+/* line 245, ../sass/global.scss */
 .photo.large, .photo-large.large {
   float: none;
 }
 
-/* line 241, ../sass/global.scss */
+/* line 249, ../sass/global.scss */
 .photo {
   width: 212px;
   height: 162px;
 }
 
-/* line 248, ../sass/global.scss */
+/* line 256, ../sass/global.scss */
 table.table td.icon {
   padding: 6px 0 0;
   text-align: center;
   vertical-align: middle;
 }
-/* line 253, ../sass/global.scss */
+/* line 261, ../sass/global.scss */
 table.table td.icon.wide {
   padding: 4px 0;
 }
-/* line 257, ../sass/global.scss */
+/* line 265, ../sass/global.scss */
 table.table td.forum {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 261, ../sass/global.scss */
+/* line 269, ../sass/global.scss */
 table.table td.forum a {
   font-weight: bold;
 }
-/* line 265, ../sass/global.scss */
+/* line 273, ../sass/global.scss */
 table.table td.topic {
   padding: 6px;
 }
-/* line 268, ../sass/global.scss */
+/* line 276, ../sass/global.scss */
 table.table td.topic .thread-preview {
   width: 100%;
   height: 1.5em;
   line-height: 1.8em;
   overflow: hidden;
 }
-/* line 275, ../sass/global.scss */
+/* line 283, ../sass/global.scss */
 table.table td.lastpost {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 279, ../sass/global.scss */
+/* line 287, ../sass/global.scss */
 table.table td.lastpost a {
   font-weight: bold;
 }
-/* line 280, ../sass/global.scss */
+/* line 288, ../sass/global.scss */
 table.table td.lastpost div a {
   font-weight: normal;
 }
-/* line 281, ../sass/global.scss */
+/* line 289, ../sass/global.scss */
 table.table td.lastpost.topic {
   text-align: right;
   font-size: 10pt;
 }
-/* line 282, ../sass/global.scss */
+/* line 290, ../sass/global.scss */
 table.table td.lastpost.message {
   font-size: 10pt;
   color: #999;
 }
-/* line 284, ../sass/global.scss */
+/* line 292, ../sass/global.scss */
 table.table td.score {
   padding: 4px 0;
 }
-/* line 285, ../sass/global.scss */
+/* line 293, ../sass/global.scss */
 table.table td.ending {
   font-size: 10pt;
 }
-/* line 286, ../sass/global.scss */
+/* line 294, ../sass/global.scss */
 table.table td.date {
   font-size: 10pt;
   text-align: center;
 }
-/* line 287, ../sass/global.scss */
+/* line 295, ../sass/global.scss */
 table.table td.posts {
   font-size: 10pt;
   text-align: center;
   color: #aaaaaa;
 }
-/* line 288, ../sass/global.scss */
+/* line 296, ../sass/global.scss */
 table.table td.nowrap {
   white-space: nowrap;
 }
-/* line 291, ../sass/global.scss */
+/* line 299, ../sass/global.scss */
 table.table th.date, table.table th.posts {
   text-align: center;
 }
-/* line 298, ../sass/global.scss */
+/* line 306, ../sass/global.scss */
 table.table tr.unread td.topic a, table.table tr.unread td.from a {
   font-weight: bold;
 }
-/* line 303, ../sass/global.scss */
+/* line 311, ../sass/global.scss */
 table.table tr.selected td {
   background: #555555 !important;
 }
-/* line 305, ../sass/global.scss */
+/* line 313, ../sass/global.scss */
 table.table .tiny {
   font-size: 9pt;
   color: #000 !important;
   font-weight: normal !important;
 }
-/* line 307, ../sass/global.scss */
+/* line 315, ../sass/global.scss */
 table.table th.icon, table.table td.icon {
   width: 50px;
 }
-/* line 308, ../sass/global.scss */
+/* line 316, ../sass/global.scss */
 table.table th.icon.wide, table.table td.icon.wide {
   width: 55px;
 }
-/* line 310, ../sass/global.scss */
+/* line 318, ../sass/global.scss */
 table.table .posts {
   width: 80px;
 }
 
-/* line 312, ../sass/global.scss */
+/* line 320, ../sass/global.scss */
 .table.no-border {
   background: none;
 }
-/* line 316, ../sass/global.scss */
+/* line 324, ../sass/global.scss */
 .table.no-border > tbody > tr th, .table.no-border > tbody > tr td {
   border-top: none;
 }
 
-/* line 322, ../sass/global.scss */
+/* line 330, ../sass/global.scss */
 .smileys {
   border: 1px solid #666;
   padding: 6px;
@@ -560,53 +571,53 @@ table.table .posts {
   font-size: 10pt;
 }
 
-/* line 330, ../sass/global.scss */
+/* line 338, ../sass/global.scss */
 .emote {
   padding: 4px 6px 2px 6px;
   float: left;
   border: 1px solid transparent;
 }
-/* line 334, ../sass/global.scss */
+/* line 342, ../sass/global.scss */
 .emote:hover {
   background: #5f5f5f;
   border: 1px solid #333333;
 }
-/* line 335, ../sass/global.scss */
+/* line 343, ../sass/global.scss */
 .emote:active {
   background: #444;
   border: 1px solid #222;
 }
 
-/* line 338, ../sass/global.scss */
+/* line 346, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu {
   cursor: default;
 }
-/* line 342, ../sass/global.scss */
+/* line 350, ../sass/global.scss */
 ul.dropdown-menu.bbcode-menu li:hover {
   background: #5f5f5f;
 }
-/* line 345, ../sass/global.scss */
+/* line 353, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size {
   min-width: 100px;
 }
-/* line 348, ../sass/global.scss */
+/* line 356, ../sass/global.scss */
 ul.dropdown-menu.bbcode-size li {
   padding: 2px 8px;
 }
-/* line 350, ../sass/global.scss */
+/* line 358, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color {
   min-width: 152px;
   width: 152px;
   padding-left: 3px;
 }
-/* line 355, ../sass/global.scss */
+/* line 363, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li {
   display: block;
   float: left;
   padding: 3px;
   font-size: 0;
 }
-/* line 361, ../sass/global.scss */
+/* line 369, ../sass/global.scss */
 ul.dropdown-menu.bbcode-color li span {
   display: block;
   border: 1px solid #aca899;
@@ -614,50 +625,54 @@ ul.dropdown-menu.bbcode-color li span {
   width: 12px;
 }
 
-/* line 370, ../sass/global.scss */
+/* line 378, ../sass/global.scss */
 .bbcode-toolbar .btn {
   min-width: 32px;
   height: 30px !important;
   padding: 5px 10px;
   overflow: hidden;
 }
-/* line 376, ../sass/global.scss */
+/* line 384, ../sass/global.scss */
 .bbcode-toolbar .btn .bbcode-quote {
   font-size: 36px;
   line-height: 1;
   display: block;
 }
-/* line 381, ../sass/global.scss */
+/* line 389, ../sass/global.scss */
 .bbcode-toolbar .btn .bbcode-underline {
   text-decoration: underline;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 386, ../sass/global.scss */
+/* line 394, ../sass/global.scss */
 .bbcode-toolbar .btn .bbcode-strikethrough {
   text-decoration: line-through;
   font-size: 15px;
   line-height: 12px;
 }
-/* line 391, ../sass/global.scss */
+/* line 399, ../sass/global.scss */
 .bbcode-toolbar .btn .bbcode-ol {
   font-size: 9px;
   line-height: 10px;
   display: block;
 }
+/* line 404, ../sass/global.scss */
+.bbcode-toolbar .btn .glyphicon {
+  margin-right: 0;
+}
 
-/* line 398, ../sass/global.scss */
+/* line 409, ../sass/global.scss */
 table.calendar {
   padding: 0;
   border-collapse: collapse;
 }
-/* line 400, ../sass/global.scss */
+/* line 411, ../sass/global.scss */
 table.calendar th {
   text-align: center;
   width: 14%;
   color: #ccc;
 }
-/* line 401, ../sass/global.scss */
+/* line 412, ../sass/global.scss */
 table.calendar td.day {
   width: 14%;
   height: 85px;
@@ -667,37 +682,37 @@ table.calendar td.day {
   padding: 4px;
   font-size: 8pt;
 }
-/* line 404, ../sass/global.scss */
+/* line 415, ../sass/global.scss */
 table.calendar td.day.has-events {
   border: 2px solid #000;
   background: #7f7f7f;
 }
-/* line 405, ../sass/global.scss */
+/* line 416, ../sass/global.scss */
 table.calendar td.day.today {
   border: 2px solid #000;
 }
-/* line 406, ../sass/global.scss */
+/* line 417, ../sass/global.scss */
 table.calendar td.day.today.has-events {
   background: #999;
 }
 
-/* line 413, ../sass/global.scss */
+/* line 424, ../sass/global.scss */
 #shoutbox a.at_reply {
   color: #ccc;
   text-decoration: none;
 }
-/* line 415, ../sass/global.scss */
+/* line 426, ../sass/global.scss */
 #shoutbox th.date {
   background: #3e444c;
   color: #eee;
   text-align: right;
 }
-/* line 420, ../sass/global.scss */
+/* line 431, ../sass/global.scss */
 #shoutbox p {
   margin: 0;
 }
 
-/* line 425, ../sass/global.scss */
+/* line 436, ../sass/global.scss */
 #embed #shoutbox tbody {
   display: block;
   font-size: 10pt;
@@ -705,7 +720,7 @@ table.calendar td.day.today.has-events {
   overflow: auto;
 }
 
-/* line 433, ../sass/global.scss */
+/* line 444, ../sass/global.scss */
 .attachment-box {
   margin: 15px 0 0;
   padding: 8px 0;
@@ -713,7 +728,7 @@ table.calendar td.day.today.has-events {
   border-bottom: 1px solid #999999;
 }
 
-/* line 438, ../sass/global.scss */
+/* line 449, ../sass/global.scss */
 a.scaled {
   text-decoration: none;
   display: block;
@@ -724,32 +739,32 @@ a.scaled {
   font-size: 10pt;
 }
 
-/* line 443, ../sass/global.scss */
+/* line 454, ../sass/global.scss */
 .quote {
   margin: 5px 0 5px 20px;
   border: 1px solid #333;
   background: #777777;
   padding: 0;
 }
-/* line 445, ../sass/global.scss */
+/* line 456, ../sass/global.scss */
 .quote .author {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #333;
   background: #555555;
 }
-/* line 447, ../sass/global.scss */
+/* line 458, ../sass/global.scss */
 .quote .author img {
   margin-left: 10px;
   vertical-align: middle;
 }
-/* line 449, ../sass/global.scss */
+/* line 460, ../sass/global.scss */
 .quote .content {
   margin: 0;
   padding: 5px 15px 5px 5px;
 }
 
-/* line 452, ../sass/global.scss */
+/* line 463, ../sass/global.scss */
 .spoiler-alert {
   color: #900;
   background: #777;
@@ -758,13 +773,13 @@ a.scaled {
   text-decoration: none;
   padding: 2px 5px;
 }
-/* line 455, ../sass/global.scss */
+/* line 466, ../sass/global.scss */
 .spoiler-alert:hover {
   color: #060;
   border: 2px dashed #060;
 }
 
-/* line 457, ../sass/global.scss */
+/* line 468, ../sass/global.scss */
 .spoiler {
   display: none;
   border: 2px dashed #900;
@@ -772,7 +787,7 @@ a.scaled {
   padding: 5px;
 }
 
-/* line 461, ../sass/global.scss */
+/* line 472, ../sass/global.scss */
 pre.code {
   font-size: 10pt;
   font-family: "Courier New",mono;
@@ -785,23 +800,37 @@ pre.code {
   overflow-x: auto;
 }
 
-/* line 467, ../sass/global.scss */
+/* line 478, ../sass/global.scss */
 .gold-icon {
   color: #ffe400;
 }
 
-/* line 471, ../sass/global.scss */
+/* line 482, ../sass/global.scss */
 .sig {
   border-top: 1px dotted #cccccc;
   color: #cccccc;
   font-size: 10pt;
 }
-/* line 475, ../sass/global.scss */
+/* line 486, ../sass/global.scss */
 .sig object {
   display: none;
 }
 
-/* line 478, ../sass/global.scss */
+/* line 488, ../sass/global.scss */
+.with-attachments {
+  border-top: 1px dotted #cccccc;
+  color: #cccccc;
+}
+/* line 493, ../sass/global.scss */
+.with-attachments .media .media-left {
+  font-size: 24pt;
+}
+/* line 496, ../sass/global.scss */
+.with-attachments .media .media-body {
+  padding-left: 20px;
+}
+
+/* line 502, ../sass/global.scss */
 .thumbnail-selector {
   float: left;
   width: 500px;
@@ -814,36 +843,36 @@ pre.code {
   line-height: 0;
   padding: 10px 5px;
 }
-/* line 481, ../sass/global.scss */
+/* line 505, ../sass/global.scss */
 .thumbnail-selector .thumbnail {
   margin: 0 3px;
   height: 150px;
   display: inline-block;
 }
-/* line 483, ../sass/global.scss */
+/* line 507, ../sass/global.scss */
 .thumbnail-selector .thumbnail div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 485, ../sass/global.scss */
+/* line 509, ../sass/global.scss */
 .thumbnail-selector .thumbnail div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
 
 @media all and (max-width: 767px) {
-  /* line 492, ../sass/global.scss */
+  /* line 516, ../sass/global.scss */
   table.table th.icon, table.table td.icon {
     width: 30px;
   }
-  /* line 494, ../sass/global.scss */
+  /* line 518, ../sass/global.scss */
   table.table th.icon.wide, table.table td.icon.wide {
     width: 35px;
   }
 
-  /* line 497, ../sass/global.scss */
+  /* line 521, ../sass/global.scss */
   .album {
     width: 100%;
     min-height: 97px;
@@ -851,55 +880,55 @@ pre.code {
     padding-left: 142px;
     margin-bottom: 15px;
   }
-  /* line 504, ../sass/global.scss */
+  /* line 528, ../sass/global.scss */
   .album .photo {
     width: 112px;
     height: 87px;
   }
-  /* line 507, ../sass/global.scss */
+  /* line 531, ../sass/global.scss */
   .album .photo img {
     max-width: 100px;
     max-height: 75px;
   }
 
-  /* line 515, ../sass/global.scss */
+  /* line 539, ../sass/global.scss */
   footer #social-media {
     float: none;
     margin: 0 0 10px;
   }
-  /* line 517, ../sass/global.scss */
+  /* line 541, ../sass/global.scss */
   footer #social-media img {
     margin: 0;
   }
-  /* line 519, ../sass/global.scss */
+  /* line 543, ../sass/global.scss */
   footer #social-media ul.footer li {
     margin: 0 3px;
   }
 
-  /* line 524, ../sass/global.scss */
+  /* line 548, ../sass/global.scss */
   div.scaled {
     display: none;
   }
 
-  /* line 525, ../sass/global.scss */
+  /* line 549, ../sass/global.scss */
   img.post-image {
     max-width: 100%;
     height: auto;
   }
 }
 @media print {
-  /* line 529, ../sass/global.scss */
+  /* line 553, ../sass/global.scss */
   a {
     color: #369 !important;
     text-decoration: none;
   }
 
-  /* line 530, ../sass/global.scss */
+  /* line 554, ../sass/global.scss */
   nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
     display: none;
   }
 
-  /* line 533, ../sass/global.scss */
+  /* line 557, ../sass/global.scss */
   img {
     max-width: 100%;
     height: auto;
